@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#4270] Fix issue where images could not be removed when using a custom basePath TV
 - Add User Group related events
 - [#4260] Change title tag in mgr UI to reflect current page
 - [#4256] Add caption field to Quick Create/Update TV
